--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,10 +10,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  lint:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14.x]
@@ -22,10 +20,29 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test --passWithNoTests
+    - name: Linting Starts
+      run: npm install 
+      run: npm run lint
+
+  # docker:
+  #   if: github.ref == 'refs/heads/main'
+  #   name: Publish - Docker Hub
+  #   runs-on: ubuntu-18.04
+  #   needs: [build]
+  #   env:
+  #     REPO: ${{ secrets.DOCKER_REPO }}
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Use Node.js ${{ matrix.node-version }}
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: ${{ matrix.node-version }}
+  #   - name: Login to Docker Hub
+  #     run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+  #   - name: Build Docker image
+  #     run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+  #   - name: Publish Docker image
+  #     run: docker push $REPO
