--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,3 +47,15 @@ jobs:
       run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
     - name: Publish Docker image
       run: docker push $REPO
+  
+  webhookDeploy:
+    if: github.ref == 'refs/heads/main'
+    name: Trigger webhook on AWS instance 
+    runs-on: ubuntu-18.04
+    needs: [docker]
+    steps:
+      - name: Deploy docker container webhook
+        uses: joelwmale/webhook-action@master
+        env:
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL  }}
+          data: "{ 'myField': 'myFieldValue'}"
