--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm run lint
 
   docker:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     name: Publish - Docker Hub
     runs-on: ubuntu-18.04
     needs: [lint]
@@ -49,7 +49,7 @@ jobs:
       run: docker push $REPO
   
   webhookDeploy:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     name: Trigger webhook on AWS instance 
     runs-on: ubuntu-18.04
     needs: [docker]
