--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,11 +28,28 @@ jobs:
     - name: Linting Starts 
       run: npm run lint
 
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+      
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Pre testing
+      run: npm install
+    - name: Unit Testing Starts
+      run: npm run test
+
   docker:
     if: github.ref == 'refs/heads/master'
     name: Publish - Docker Hub
     runs-on: ubuntu-18.04
-    needs: [lint]
+    needs: [lint, test]
     env:
       REPO: ${{ secrets.DOCKER_REPO }}
     steps:
