--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.13",
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
+    "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
@@ -23,6 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
