--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,6 +60,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Build react app
         run: |
+          npm i
           npm run build
           cd dist
           ls
