change check folder name

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,7 +65,7 @@ jobs:
           ls
           npm install
           npm run build
-          cd dist
+          cd build
           ls
 
   docker:
