--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,7 +72,7 @@ jobs:
           username : ${{secrets.REMOTE_USER}}
           key: ${{ secrets.SSH_KEY }}
           rm: true
-          source: "build/"
+          source: "build/*"
           target: "${{ secrets.REMOTE_DIR }}"
 
   docker:
