Concert API call Started with concertData Display

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/** -c .eslintrc.json --ext ts,tsx",
-    "lint-fix": "eslint ./src/** -c .eslintrc.json --fix --ext ts,tsx"
+    "lint-fix": "eslint ./src -c .eslintrc.json --fix --ext ts,tsx"
   },
   "browserslist": {
     "production": [
