--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.33",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
     "antd": "^4.16.13",
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
     "cross-env": "^7.0.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
@@ -45,6 +42,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.176",
+    "@types/node": "^12.20.33",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
     "@testing-library/react": "^11.2.7",
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
