--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
     "cross-env": "^7.0.3",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.9.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.7",
+    "@types/downloadjs": "^1.4.2",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.176",
     "@types/node": "^12.20.33",
