usertid added in header of api calls

--- a/src/services/config.json
+++ b/src/services/config.json
@@ -1,3 +1,8 @@
 { 
-  "baseURL": "http://52.66.164.23/api"
+  "baseURL": "http://52.66.164.23/api",
+  "HEADER": {
+    "headers": {
+      "userid": "1238989"
+    }
+  }
 }
