--- a/src/services/config.json
+++ b/src/services/config.json
@@ -1,8 +1,3 @@
 { 
-  "baseURL": "http://52.66.164.23/api",
-  "HEADER": {
-    "headers": {
-      "userid": "1238989"
-    }
-  }
+  "baseURL": "http://52.66.164.23/api"
 }
