--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/** -c .eslintrc.json --ext ts,tsx",
-    "lint-fix": "eslint ./src -c .eslintrc.json --fix --ext ts,tsx"
+    "lint-fix": "eslint ./src -c .eslintrc.json --fix --ext ts,tsx",
+    "presubmit": "npm run lint && npm run test"
   },
   "browserslist": {
     "production": [
