--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@progress/kendo-react-pdf": "^4.10.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^12.8.3",
+    "@tinymce/tinymce-react": "^3.13.0",
     "antd": "^4.16.13",
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
