--- a/src/services/config.json
+++ b/src/services/config.json
@@ -1,3 +1,4 @@
 { 
-  "baseURL": "http://52.66.164.23/api"
+  "baseURL": "http://52.66.164.23/api",
+  "TINY_API": "lyilqay38n6k0gmjp8crc6fn9s4qj1t5mv2gloon11lz0n0s"
 }
