--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,9 @@
         ],
         "no-shadow": "off",
         "@typescript-eslint/no-shadow": ["error"],
-        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "react/react-in-jsx-scope": "off",
+        "import/prefer-default-export": "off"
     },
     "settings": {
         "import/resolver": {
