--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cross-env": "^7.0.3",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.9.0",
+    "jose": "^4.3.7",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -51,11 +53,12 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/downloadjs": "^1.4.2",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.176",
     "@types/node": "^12.20.33",
-    "@types/react": "^17.0.30",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
