--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "react-scripts start",
     "dev": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --detectOpenHandles",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/** -c .eslintrc.json --ext ts,tsx",
     "lint-fix": "eslint ./src -c .eslintrc.json --fix --ext ts,tsx",
