--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jose": "^4.3.7",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "millify": "^4.0.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
