--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "sass": "^1.43.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
