--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@progress/kendo-drawing": "^1.16.0",
     "@progress/kendo-licensing": "^1.2.1",
     "@progress/kendo-react-pdf": "^4.10.0",
+    "@react-pdf/renderer": "^2.0.21",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^12.8.3",
     "@tinymce/tinymce-react": "^3.13.0",
@@ -21,15 +22,19 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "millify": "^4.0.0",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.6",
     "sass": "^1.43.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
+  },
+  "peerDependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
