--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,10 +46,10 @@ jobs:
       run: npm run test
 
   build:
-    if: github.ref == 'refs/heads/master' 
+    # if: github.ref == 'refs/heads/master' 
     name: Build static html files
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    # needs: [lint, test]
     strategy:
       matrix:
         node-version: [16.x]
@@ -63,15 +63,15 @@ jobs:
         run: |
           npm install
           npm run build
-      - name: Copy files to the server
-        uses: appleboy/scp-action@master
-        with:
-          host : ${{secrets.REMOTE_HOST}}
-          username : ${{secrets.REMOTE_USER}}
-          key: ${{ secrets.SSH_KEY }}
-          rm: true
-          source: "build/*"
-          target: "${{ secrets.REMOTE_DIR }}"
+      # - name: Copy files to the server
+      #   uses: appleboy/scp-action@master
+      #   with:
+      #     host : ${{secrets.REMOTE_HOST}}
+      #     username : ${{secrets.REMOTE_USER}}
+      #     key: ${{ secrets.SSH_KEY }}
+      #     rm: true
+      #     source: "build/*"
+      #     target: "${{ secrets.REMOTE_DIR }}"
   
   webhookDeploy:
     if: github.ref == 'refs/heads/master'
