--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,6 +45,43 @@ jobs:
     - name: Unit Testing Starts
       run: npm run test
 
+  s3deploy:
+    if: github.ref == 'refs/heads/master' 
+    name: Build and deploy static html on s3 bucket
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+    - uses: actions/checkout@master
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with: 
+        node-version: ${{ matrix.node-version }}
+    - name: Build react app
+      run: |
+        npm install
+        npm run build
+    - name: Uploading to s3  
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --delete
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        SOURCE_DIR: 'build'
+    - name: invalidate cloudfront distribution
+      uses: muratiger/invalidate-cloudfront-and-wait-for-completion-action@master
+      env:
+        DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
+        PATHS: '/*'
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  
   build:
     if: github.ref == 'refs/heads/master' 
     name: Build static html files
