--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -82,42 +82,43 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   
-  build:
-    if: github.ref == 'refs/heads/master' 
-    name: Build static html files
-    runs-on: ubuntu-latest
-    needs: [lint, test]
-    strategy:
-      matrix:
-        node-version: [16.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with: 
-          node-version: ${{ matrix.node-version }}
-      - name: Build react app
-        run: |
-          npm install
-          npm run build
-      - name: Copy files to the server
-        uses: appleboy/scp-action@master
-        with:
-          host : ${{secrets.REMOTE_HOST}}
-          username : ${{secrets.REMOTE_USER}}
-          key: ${{ secrets.SSH_KEY }}
-          rm: true
-          source: "build/*"
-          target: "${{ secrets.REMOTE_DIR }}"
+  # Stopping build to be deployed on ec2
+  # build:
+  #   if: github.ref == 'refs/heads/master' 
+  #   name: Build static html files
+  #   runs-on: ubuntu-latest
+  #   needs: [lint, test]
+  #   strategy:
+  #     matrix:
+  #       node-version: [16.x]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Use Node.js ${{ matrix.node-version }}
+  #       uses: actions/setup-node@v1
+  #       with: 
+  #         node-version: ${{ matrix.node-version }}
+  #     - name: Build react app
+  #       run: |
+  #         npm install
+  #         npm run build
+  #     - name: Copy files to the server
+  #       uses: appleboy/scp-action@master
+  #       with:
+  #         host : ${{secrets.REMOTE_HOST}}
+  #         username : ${{secrets.REMOTE_USER}}
+  #         key: ${{ secrets.SSH_KEY }}
+  #         rm: true
+  #         source: "build/*"
+  #         target: "${{ secrets.REMOTE_DIR }}"
   
-  webhookDeploy:
-    if: github.ref == 'refs/heads/master'
-    name: Trigger webhook on AWS instance 
-    runs-on: ubuntu-18.04
-    needs: [build]
-    steps:
-      - name: Deploy the copied html files
-        uses: joelwmale/webhook-action@master
-        env:
-          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL  }}
-          data: "{ 'myField': 'myFieldValue'}"
+  # webhookDeploy:
+  #   if: github.ref == 'refs/heads/master'
+  #   name: Trigger webhook on AWS instance 
+  #   runs-on: ubuntu-18.04
+  #   needs: [build]
+  #   steps:
+  #     - name: Deploy the copied html files
+  #       uses: joelwmale/webhook-action@master
+  #       env:
+  #         WEBHOOK_URL: ${{ secrets.WEBHOOK_URL  }}
+  #         data: "{ 'myField': 'myFieldValue'}"
