--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Pre linting
-      run: npm install    
+      run: npm install  
+    - name: build
+      run: npm run build  
     - name: Linting Starts 
       run: npm run lint
 
