--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@progress/kendo-licensing": "^1.2.1",
     "@progress/kendo-react-pdf": "^4.10.0",
     "@react-pdf/renderer": "^2.0.21",
+    "@rebaseitlabs/compare-data": "^0.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^12.8.3",
     "@tinymce/tinymce-react": "^3.13.0",
