--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
         "@typescript-eslint/no-shadow": ["error"],
         "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
         "react/react-in-jsx-scope": "off",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "class-methods-use-this": "off"
     },
     "settings": {
         "import/resolver": {
