--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^12.8.3",
     "@tinymce/tinymce-react": "^3.13.0",
+    "@types/uuid": "^9.0.1",
     "antd": "^4.16.13",
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
@@ -23,6 +24,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "millify": "^4.0.0",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
@@ -31,6 +33,7 @@
     "recharts": "^2.1.6",
     "sass": "^1.43.2",
     "typescript": "^4.5.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^1.1.2"
   },
   "peerDependencies": {
